- Changed home page to tracker page; Changed notification page to progress page
- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashboard/feed page

- Added default image to every post, implement Glide library for optimized loading of images

- Posts can currently display title, info/description, and image

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_tracker">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.myapplication.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:id="@+id/navigation_tracker"
+        android:name="com.example.myapplication.ui.tracker.TrackerFragment"
+        android:label="@string/title_tracker"
         tools:layout="@layout/fragment_home" />
 
     <fragment
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_progress"
+        android:name="com.example.myapplication.ui.progress.ProgressFragment"
+        android:label="@string/title_progress"
+        tools:layout="@layout/fragment_progress" />
 </navigation>
