--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,18 @@
     android:background="@drawable/loginbkg"
     tools:context="com.example.myapplication.MainActivity">
 
+    <TextView
+        android:id="@+id/loginText3"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Total Fitness"
+        android:textAlignment="center"
+        android:textColor="#3963d5"
+        android:textColorLink="#3963d5"
+        android:textSize="55sp"
+        android:textStyle="bold" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,14 +40,15 @@
 
 
             <TextView
+                android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
-                android:id="@+id/loginText"
-                android:textSize="36sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/purple"/>
+                android:textColor="#f65f44"
+                android:textColorLink="#f65f44"
+                android:textSize="36sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -65,28 +78,28 @@
                 android:layout_marginTop="20dp"/>
 
             <Button
+                android:id="@+id/loginButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:id="@+id/loginButton"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="#f65f44"
                 android:text="Login"
                 android:textSize="18sp"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius="20dp" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/signupText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
         android:padding="8dp"
         android:text="Not yet registered? SignUp Now"
-        android:textSize="14sp"
         android:textAlignment="center"
-        android:id="@+id/signupText"
-        android:textColor="@color/purple"
-        android:layout_marginBottom="20dp"/>
+        android:textColor="#3963d5"
+        android:textSize="14sp" />
 
 </LinearLayout>
