--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -26,7 +26,8 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="55dp"/>
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="70dp"/>
 
     <TextView
         android:id="@+id/text_dashboard"
