--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,7 +25,7 @@
             android:text="@string/title_placeholder" />
 
         <TextView
-            android:id="@+id/newsTitle"
+            android:id="@+id/userTitle"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/newsTitle"
+            android:layout_below="@id/userTitle"
             android:padding="8dp"
             android:text="@string/posts_info_placeholder" />
 
