--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#ececec">
+    android:background="#ececec"
+    tools:context=".MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -92,8 +91,8 @@
                         android:paddingStart="20dp"
                         android:paddingEnd="20dp"
                         android:text="@string/settings"
-                        android:textAllCaps="false"
                         android:textAlignment="viewStart"
+                        android:textAllCaps="false"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -174,6 +173,7 @@
                         android:textStyle="bold" />
 
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/HomeButton"
                         style="@android:style/Widget.Button"
                         android:layout_width="320dp"
                         android:layout_height="60dp"
@@ -188,7 +188,7 @@
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
