actually working now on API 34 and below

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <item name="colorPrimary">#2547a5</item> <!-- Action bar color -->
-        <item name="colorPrimaryDark">#0c2e8c</item> <!-- Status bar color -->
-        <item name="colorAccent">#a9b3cf</item> <!-- Accent color -->
+        <item name="colorPrimary">#2547a5</item>
+        <item name="colorPrimaryDark">#0c2e8c</item>
+        <item name="colorAccent">#a9b3cf</item>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
