--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,15 +90,15 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/signupText"
+    <Button
+        android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:padding="8dp"
-        android:text="Not yet registered? SignUp Now"
+        android:text="Not yet registered? Sign Up Now"
         android:textAlignment="center"
-        android:textColor="#3963d5"
+        android:textColor="@color/white"
         android:textSize="14sp" />
 
 
