--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -100,6 +100,16 @@
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="15dp"
+                android:backgroundTint="#3963d5"
+                android:text="Back to Login"
+                android:textSize="18sp"
+                app:cornerRadius="20dp" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
