--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_tracker"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/progress"
         android:title="@string/title_tracker" />
 
     <item
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_progress"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/workout"
         android:title="@string/title_progress"/>
 
 </menu>
