--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -21,7 +21,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-
+    <!-- Existing TextView for progress -->
     <TextView
         android:id="@+id/text_progress"
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-
+    <!-- Existing header for milestones and achievements -->
     <TextView
         android:id="@+id/milestonesHeader"
         android:layout_width="match_parent"
@@ -45,6 +45,7 @@
         android:text="Milestones and Achievements"
         android:textSize="20sp" />
 
+    <!-- Existing RecyclerView for displaying achievements -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -52,8 +53,22 @@
         android:layout_marginTop="100dp"
         android:scrollbars="horizontal" />
 
+    <!-- New input field for user to enter a number -->
+    <EditText
+        android:id="@+id/input_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="Enter a number"
+        android:inputType="number" />
+
+    <!-- New button to save the input -->
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
-
