- Resolved errors prohibiting app launch - Added logout/exit icon - Replaced missing bottom nav icons with temporary icon

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -170,7 +170,7 @@
                         android:textAlignment="viewStart"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        android:drawableStart="@drawable/exit"/>
+                        android:drawableStart="@drawable/ic_exit"/>
 
 
                     <androidx.appcompat.widget.AppCompatButton
