--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,16 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+
+    <!-- Example entries -->
+    <string-array name="example_entries">
+        <item>Option 1</item>
+        <item>Option 2</item>
+    </string-array>
+
+    <string-array name="example_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
